# parallel_programming

./: .gitignore
30/: CMakeLists.txt  README.MD  main.c  main_back.c  test
35/: CMakeLists.txt  README.MD  main.c  main_bad.c  main_mpi.c
39/: CMakeLists.txt  README.MD  main.c
39/cpu/: CMakeLists.txt  README.MD  main.c
39/cpu/finder_xyz/: find_xyz.c  find_xyz.h
39/cpu/uint128_tools/: uint128_tools.c
39/finder_xyz/: find_xyz.c  find_xyz.h
39/gpu/: CMakeLists.txt  ForTest.cl  README.MD  finder  finder.c  finderCL  finder_kernel.cl  hello
39/uint128_tools/: uint128_tools.c  uint128_tools.h
4/: CMakeLists.txt  main.c
4/cpu/: linear_solver_cpu.c  linear_solver_cpu.h
4/gpu/: linear_solver_gpu.cu  linear_solver_gpu.h
